Renamed file and class names

--- a/react_webviews/src/reports/commonStyle.scss
+++ b/react_webviews/src/reports/commonStyle.scss
@@ -51,11 +51,11 @@
             }
           }
 
-          .green {
+          .green-text {
             color: #71bf1c;
           }
 
-          .red {
+          .red-text {
             color: #d0021b;
           }
         }
@@ -160,11 +160,11 @@
           }
         }
 
-        .green {
+        .green-text {
           color: #71bf1c;
         }
 
-        .red {
+        .red-text {
           color: #d0021b;
         }
       }
@@ -174,11 +174,11 @@
       }
     }
 
-    .red {
+    .red-text {
       color: #d32f2f;
     }
 
-    .green {
+    .green-text {
       color: #34ca5c;
     }
   }
