--- a/react_webviews/src/reports/components/Fundwise/commonStyles.scss
+++ b/react_webviews/src/reports/components/Fundwise/commonStyles.scss
@@ -109,11 +109,11 @@
           color: #333333;
         }
 
-        .green {
+        .green-text {
           color: #71bf1c;
         }
 
-        .red {
+        .red-text {
           color: #d0021b;
         }
       }
@@ -157,11 +157,11 @@
         text-transform: capitalize;
       }
 
-      .green {
+      .green-text {
         color: #71bf1c;
       }
 
-      .red {
+      .red-text {
         color: #d0021b;
       }
     }
