--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1712,6 +1712,7 @@ $header-title-font-size: 20px;
 .fund-details-dual-button-content {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   column-gap: 18px;
   font-size: 13px;
   text-transform: lowercase;
@@ -1724,18 +1725,23 @@ $header-title-font-size: 20px;
     position: relative;
 
     img {
-      width: 20px;
+      width: 22px;
       height: 38px;
     }
 
-    span {
+    .circle {
       position: absolute;
       border-radius: 50%;
       background-color: #477d3c;
-      padding: 3px 7px 2px 7px;
+      padding: 5px;
+      width: 25px;
+      height: 25px;
       right: -15px;
       top: -4px;
-      font-size: 14px;
+      text-align: center;
+      span {
+        font-size: 14px;
+      }
     }
   }
 }
