--- a/react_webviews/src/fund_details/common/Style.scss
+++ b/react_webviews/src/fund_details/common/Style.scss
@@ -66,31 +66,40 @@
     border-bottom-right-radius: 0;
     text-transform: lowercase;
 
+
     .fund-details-dual-button-content {
       display: flex;
       justify-content: space-between;
+      align-items: center;
       column-gap: 18px;
       font-size: 13px;
       text-transform: lowercase;
       min-width: 100px;
-      padding: 0 10px;
+      padding: 4px 10px;
+      margin: -10px 0;
 
       .cart-content {
         display: flex;
         position: relative;
-  
+
         img {
-          width: 20px;
+          width: 22px;
+          height: 38px;
         }
-  
-        span {
+
+        .circle {
           position: absolute;
           border-radius: 50%;
-          background-color: #477D3C;
-          padding: 4px 8px 3px 8px;
+          background-color: #477d3c;
+          padding: 5px;
+          width: 25px;
+          height: 25px;
           right: -15px;
-          top: -5px;
-          font-size: 14px;
+          top: -4px;
+          text-align: center;
+          span {
+            font-size: 14px;
+          }
         }
       }
     }
