--- a/react_webviews/src/dashboard/Invest/commonStyles.scss
+++ b/react_webviews/src/dashboard/Invest/commonStyles.scss
@@ -49,6 +49,10 @@
     .text {
       margin-top: 40px;
     }
+
+    .success-text-message {
+      margin: 35px 0 0 0;
+    }
   }
 
   .error-message {
@@ -60,7 +64,7 @@
   .action {
     width: 100% !important;
     padding: 0 15px;
-    margin: 8px 0 30px 0;
+    margin: 0px 0 30px 0;
 
     .invest-dialog-button {
       width: 100%;
@@ -82,9 +86,5 @@
       float: right;
       background-color: rgb(250, 250, 250);
     }
-  }
-
-  .insta-redeem-action {
-    margin-top: 0;
   }
 }
