insta redeem css changes

--- a/react_webviews/src/dashboard/Invest/components/InstaRedeem/InstaRedeem.scss
+++ b/react_webviews/src/dashboard/Invest/components/InstaRedeem/InstaRedeem.scss
@@ -1,4 +1,4 @@
-.invest-redeem {
+.insta-redeem {
   padding-bottom: 30px;
 
   .generic-page-subtitle {
@@ -29,7 +29,7 @@
       font-size: 13px;
       line-height: 22px;
 
-      .know-more-text {
+      .insta-redeem-know-more {
         color: #35cb5d;
         font-size: 10px;
         font-weight: 600;
