Optimized Summary code

--- a/react_webviews/src/reports/components/Summary/commonStyles.scss
+++ b/react_webviews/src/reports/components/Summary/commonStyles.scss
@@ -151,6 +151,7 @@
             border-radius: 50%;
             border: 2px solid;
             border-color: rgba(0, 0, 0, 0.54);
+            cursor: pointer;
           }
 
           .selected {
