--- a/react_webviews/src/reports/components/Fundwise/commonStyles.scss
+++ b/react_webviews/src/reports/components/Fundwise/commonStyles.scss
@@ -110,11 +110,11 @@
           color: #333333;
         }
 
-        .green-text {
+        .fundswise-green-text {
           color: #71bf1c;
         }
 
-        .red-text {
+        .fundswise-red-text {
           color: #d0021b;
         }
       }
@@ -158,11 +158,11 @@
         text-transform: capitalize;
       }
 
-      .green-text {
+      .fundswise-green-text {
         color: #71bf1c;
       }
 
-      .red-text {
+      .fundswise-red-text {
         color: #d0021b;
       }
     }
