--- a/react_webviews/src/reports/components/Sip/commonStyles.scss
+++ b/react_webviews/src/reports/components/Sip/commonStyles.scss
@@ -29,28 +29,28 @@
       }
     }
 
-    .yellow-text {
+    .sip-yellow-text {
       color: #c2a20c;
       .dot {
         background-color: #c2a20c;
       }
     }
 
-    .green-text {
+    .sip-green-text {
       color: #71bf1c;
       .dot {
         background-color: #71bf1c;
       }
     }
 
-    .red-text {
+    .sip-red-text {
       color: #d0021b;
       .dot {
         background-color: #d0021b;
       }
     }
 
-    .blue-text {
+    .sip-blue-text {
       color: #3792fc;
       .dot {
         background-color: #3792fc;
@@ -107,28 +107,28 @@
     }
   }
 
-  .yellow-text {
+  .sip-yellow-text {
     color: #c2a20c;
     .dot {
       background-color: #c2a20c;
     }
   }
 
-  .green-text {
+  .sip-green-text {
     color: #71bf1c;
     .dot {
       background-color: #71bf1c;
     }
   }
 
-  .red-text {
+  .sip-red-text {
     color: #d0021b;
     .dot {
       background-color: #d0021b;
     }
   }
 
-  .blue-text {
+  .sip-blue-text {
     color: #3792fc;
     .dot {
       background-color: #3792fc;
