--- a/react_webviews/src/reports/components/Summary/commonStyles.scss
+++ b/react_webviews/src/reports/components/Summary/commonStyles.scss
@@ -17,11 +17,11 @@
       margin-bottom: 10px;
     }
 
-    .red-text {
+    .summary-red-text {
       color: #d32f2f;
     }
 
-    .green-text {
+    .summary-green-text {
       color: #34ca5c;
     }
 
