--- a/react_webviews/src/dashboard/Invest/components/Checkout/Checkout.scss
+++ b/react_webviews/src/dashboard/Invest/components/Checkout/Checkout.scss
@@ -83,13 +83,12 @@
 
     .text {
       color: #4a4a4a;
-      padding-left: 5px;
+      padding-left: 15px;
       flex: 5;
-      -ms-flex: 5;
 
       h4 {
         font-size: 18px;
-        margin-bottom: 10px;
+        margin: 0 0 10px;
         font-weight: 700;
         line-height: 1.1;
         display: flex;
