--- a/react_webviews/src/dashboard/Recommendation/Recommendation.scss
+++ b/react_webviews/src/dashboard/Recommendation/Recommendation.scss
@@ -2,9 +2,9 @@
   margin: 0 -20px;
 }
 
-.recommendation-page:nth-child(1) {
-  .recommendations-section {
-    padding-top: 0;
+.recommendation-page {
+  .recommendations-section:not(:nth-child(1)) {
+    padding-top: 40px;
   }
 }
 
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  padding: 20px 20px 30px;
+  padding: 0 20px 30px;
 
   .recommendations-header {
     width: 100%;
@@ -51,45 +51,46 @@
 
 .recommendations-disclaimers {
   margin: 60px 0;
-  
-  .recommendations-disclaimer-morning {
-    display: flex;
-    margin-bottom: 13px;
-    font-size: 13px;
+}
+
+.recommendations-disclaimer-morning {
+  display: flex;
+  margin-bottom: 13px;
+  font-size: 13px;
+  img {
+    margin-right: 5px;
+  }
+}
+
+.recommendations-disclaimer {
+  display: flex;
+  flex-direction: column;
+  .recommendations-disclaimer-tc {
+    a {
+      color: #337ab7;
+      text-decoration: none;
+    }
+    
     img {
       margin-right: 5px;
     }
-  }
-  
-  .recommendations-disclaimer {
-    display: flex;
-    flex-direction: column;
-    .recommendations-disclaimer-tc {
-      a {
-        color: #337ab7;
-        text-decoration: none;
-      }
-      img {
-        margin-right: 5px;
-      }
-  
-      span {
-        font-size: 13px;
-      }
+
+    span {
+      font-size: 13px;
     }
   }
-  
-  .recommendations-trust-icons {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 40px;
-    div {
-      font-size: 14px;
-      color: #767e86;
-      margin: 0 0 5px 0;
-      font-weight: 500;
-    }
+}
+
+.recommendations-trust-icons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+  div {
+    font-size: 14px;
+    color: #767e86;
+    margin: 0 0 5px 0;
+    font-weight: 500;
   }
 }
