--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -44,8 +44,10 @@ body[data-device="web"] {
     margin: 0 auto;
   }
   .generic-page-loader {
-    max-width: var(--desktop-width);
+    // max-width: var(--desktop-width);
+    width: 100%;
     margin: 0 auto;
+    top: 60px;
   }
   .generic-error-dialog-page{
     max-width: var(--desktop-width);
@@ -690,7 +692,7 @@ input#pan {
   width: 100%;
     height: 100%;
     position: fixed;
-    top: 0;
+    top: 50px;
     left: 0;
     right: 0;
     bottom: 0;
@@ -1694,6 +1696,10 @@ $header-title-font-size: 20px;
       border: 1px solid var(--primary);
     }
   }
+}
+
+.mobile-navbar-menu{
+  margin-left: auto;
 }
   
 .OTP-title{
