--- a/react_webviews/src/style.scss
+++ b/react_webviews/src/style.scss
@@ -12,7 +12,7 @@
 
   .feature-container{
     width: 640px !important;
-    margin-left: 283px !important;
+    margin-left: 300px !important;
     min-width: 640px !important;
     overflow: auto;
     height: 100%;
@@ -20,23 +20,25 @@
       margin: 0px !important;
       max-width: 100% !important;
       position: relative;
-      padding-bottom: 100px !important;
+      // padding-bottom: 100px !important;
       header{
         position: fixed;
-        top: 64px;
+        top: 60px;
         width: 640px !important;
-        margin-left: 283px !important;
+        margin-left: 300px !important;
       }
     }
   }
-}
 
-.navbar{
-  & > div{
-    display: flex;
-    justify-content: space-between;
+  .right-content{
+    width: calc(100% - 640px);
+    display: grid;
+    place-items: center;
+    background: #fafafa;
   }
 }
+
+
 
 @media only screen and (max-width: 500px) {
   .right-content{
