--- a/react_webviews/src/withdraw/components/WithdrawRemark/WithdrawRemark.scss
+++ b/react_webviews/src/withdraw/components/WithdrawRemark/WithdrawRemark.scss
@@ -1,5 +1,6 @@
 .withdraw-remark {
   padding-top: 20px;
+  padding-bottom: 30px;
   .withdraw-remark-title {
     padding: 20px;
     font-size: 17px;
