--- a/react_webviews/src/withdraw/mini-components/mini-components.scss
+++ b/react_webviews/src/withdraw/mini-components/mini-components.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
+  border-top: 1px solid #ededed;
+  padding-top: 20px;
 
   .withdraw-fund-header {
     display: flex;
@@ -113,17 +115,15 @@
     background-color: var(--highlight);
     padding: 10px;
     font-size: 10px;
+    align-items: center;
+    line-height: 1.5;
   }
 
-  .summary-bottom-info .MuiButton-label {
+  .summary-bottom-info .tax-summary-know-more {
+    color: var(--primary);
     font-size: 10px;
-    color: #3792FC;
-  }
-
-  .summary-bottom-info .know-more .MuiButton-root {
-    padding: 0px;
-    min-height: auto;
-    min-width: auto;
+    font-weight: 700;
+    cursor: pointer;
   }
 
   .summary-bottom-info .icon {
@@ -143,14 +143,14 @@
 
 .withdraw-explore-investment-options {
   margin: 0 auto;
-  background-color: #ededed;
-  padding-bottom: 100%;
+  background-color: #f1f1f1;
 
   .main {
     background-color: white;
     padding: 8px;
     margin-bottom: 22px;
     border: 1px solid #ede9e9;
+    border-top: 0;
   }
   .top-text {
     text-align: center;
@@ -169,7 +169,6 @@
 
   .cta-button {
     margin: 6px auto;
-    width: 80%;
     background-color: var(--secondary);
     display: flex;
     justify-content: center;
@@ -209,6 +208,7 @@
   .tiles .tile .label {
     color: #c2b1e7;
     font-size: 14px;
+    text-align: center;
   }
 }
 
