--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -1295,7 +1295,7 @@
   background-image: linear-gradient(0deg, #FFF0AC, #FBCF00);
   width: 100%;
   padding: 6%;
-  margin: '-15px 5px 30px 0';
+  margin: -15px 5px 30px 0;
   position: relative;
   min-height: 195px;
   border-radius: 4px;
