--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -1320,8 +1320,9 @@
     line-height: 18px;
     letter-spacing: 0px;
     text-align: left;
-    opacity: 0.7;
+    opacity: 0.9;
     margin: 0;
+    color: #00335D;
   }
   .button{
     position: absolute;
