Fixed invest dialog css, balance css, recommendation route

--- a/react_webviews/src/dashboard/Invest/commonStyles.scss
+++ b/react_webviews/src/dashboard/Invest/commonStyles.scss
@@ -4,7 +4,7 @@
   }
 }
 
-.invest-redeem-dialog {
+.invest-common-dialog {
   .dialog-content {
     padding: 5px 15px 15px 15px !important;
     line-height: 1.5;
