--- a/react_webviews/src/withdraw/components/Balance/Balance.scss
+++ b/react_webviews/src/withdraw/components/Balance/Balance.scss
@@ -2,10 +2,15 @@
   background-color: #f1f1f1 !important;
   line-height: 1.5;
   overflow-y: auto;
+  margin-top: 20px;
+}
+
+.withdraw-explore-override {
+  background-color: #ededed !important;
+  margin-top: 0;
 }
 
 #withdraw-balance {
-  padding-top: 20px;
   .report-header {
     background-color: var(--primary);
     color: #ffffff;
@@ -24,13 +29,14 @@
   }
   main.Card {
     margin: 20px 15px;
+    padding: 15px 20px;
   }
 
-  main.Card .MuiButton-outlined {
-    border: 1px solid var(--secondary);
-    padding: 15px 0;
-    font-size: 16px;
+  main.Card .withdraw-mid-tile-text2 {
+    font-size: 16px !important;
     font-weight: 400;
+    width: 100%;
+    height: 50px;
   }
 
   .Card .withdraw-mid-tile-img {
@@ -41,7 +47,7 @@
   }
 
   .Card .mid-tile-text {
-    margin: 22px;
+    margin: 22px 0;
     font-size: 12px;
     color: #333333;
   }
