Refactored classnames in reports

--- a/react_webviews/src/reports/commonStyles.scss
+++ b/react_webviews/src/reports/commonStyles.scss
@@ -101,7 +101,7 @@
   line-height: 1.5;
   color: #333333;
 
-  .fund {
+  .reports-fund-content {
     background: #f4f5f6;
     border-radius: 5px;
     margin-bottom: 20px;
@@ -518,7 +518,7 @@
     padding: 20px 20px 0 20px;
     background: #f1f1f1;
 
-    .fund {
+    .reports-switch-fund {
       border: 1px solid #d8d5d5;
       background: white;
       margin-bottom: 20px;
