--- a/react_webviews/src/reports/components/Fundwise/commonStyles.scss
+++ b/react_webviews/src/reports/components/Fundwise/commonStyles.scss
@@ -55,7 +55,7 @@
   line-height: 1.5;
   color: #333333;
 
-  .fund {
+  .summary-fund-content {
     border: solid 1px #e8e8e8;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -80,7 +80,7 @@
       }
 
       .right-info {
-        padding: 15px 0 5px 10px;
+        padding: 10px 0 5px 10px;
         .icon {
           font-size: 18px;
           color: gray;
@@ -108,6 +108,8 @@
 
         h5 {
           color: #333333;
+          line-height: 1.1;
+          margin: 10px 0 5px;
         }
 
         .fundswise-green-text {
