added header background support for sdk view, partner config (loan added) mandate handling in landing page, feedback page and referal dialog handled

--- a/react_webviews/src/dashboard/Invest/components/SdkLanding/SdkLanding.scss
+++ b/react_webviews/src/dashboard/Invest/components/SdkLanding/SdkLanding.scss
@@ -42,3 +42,7 @@
 .sdk-header{
   background-color: var(--primary) !important;
 }
+
+.sdk-partner-header{
+  background-color: var(--header-background) !important;
+}
