--- a/react_webviews/src/style.scss
+++ b/react_webviews/src/style.scss
@@ -14,6 +14,7 @@
     width: 640px !important;
     margin-left: 300px !important;
     min-width: 640px !important;
+    padding-bottom: 60px;
     overflow: auto;
     height: 100%;
     .ContainerWrapper{
