--- a/react_webviews/src/desktopLayout/NavList.scss
+++ b/react_webviews/src/desktopLayout/NavList.scss
@@ -4,24 +4,24 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  .user-mobile-details{
+  .user-mobile-details {
     padding: 15px;
     border-bottom: 1px solid #e8e8e8;
 
-    .user-name{
+    .user-name {
       font-size: 16px;
-    color: #333333;
-    display: block;
-    line-height: normal;
-    text-transform: uppercase;
+      color: #333333;
+      display: block;
+      line-height: normal;
+      text-transform: uppercase;
     }
 
-    .user-contact{
+    .user-contact {
       font-size: 16px;
-    color: #727272;
-    display: block;
-    line-height: normal;
-    margin-top: 0px;
+      color: #727272;
+      display: block;
+      line-height: normal;
+      margin-top: 0px;
     }
   }
   .navlink-lists {
@@ -37,7 +37,7 @@
       padding-left: 0px;
     }
 
-    .nav-link-listItem.active{
+    .nav-link-listItem.active {
       background: red !important;
     }
   }
@@ -66,12 +66,30 @@
 }
 
 @media only screen and (max-width: 500px) {
-  .navlink-container{
+  .navlink-container {
     .navlink-lists {
       width: 250px;
       .nav-link-listItem {
         padding: 3px 10px;
       }
+    }
   }
-}
+  .referral-dialog {
+    .referral-dialog-message {
+      .referral-message-wrapper {
+        margin-top: -50px;
+        .referral-message {
+          font-size: 14px;
+          line-height: 21px;
+        }
+      }
+    }
+
+    .share-refferal {
+      font-size: 14px;
+    }
+    .referral-code {
+      font-size: 16px;
+    }
+  }
 }
