--- a/react_webviews/src/feedback/FeedBack.scss
+++ b/react_webviews/src/feedback/FeedBack.scss
@@ -28,4 +28,20 @@
       line-height: 1.5;
     }
   }
+
+  .button-bg-full {
+    width: 100%;
+    padding: 5px 15px;
+    font-size: 14px;
+    border-radius: 5px;
+    min-height: 47px;
+    font-weight: bold;
+    margin: 0px !important;
+    letter-spacing: 0.01em;
+    color: white !important;
+    background-color: var(--secondary) !important;
+    .MuiButton-label{
+      text-transform: uppercase !important;
+    }
+  }
 }
