refer dialog css fix

--- a/react_webviews/src/desktopLayout/RefferalDialog.scss
+++ b/react_webviews/src/desktopLayout/RefferalDialog.scss
@@ -121,5 +121,8 @@
       min-height: 160px;
       min-width: 240px;
     }
+    .referral-skeleton-container{
+      margin-top: -50px;
+    }
   }
 }
