Fixed Button radius

--- a/react_webviews/src/dashboard/nps/style.scss
+++ b/react_webviews/src/dashboard/nps/style.scss
@@ -187,9 +187,9 @@
   color: #4a4a4a;
 }
 
-.MuiButtonBase-root {
-  border-radius: 6px !important;
-}
+// .MuiButtonBase-root {
+//   border-radius: 6px !important;
+// }
 
 .fund {
   padding: 15px;
