--- a/react_webviews/src/dashboard/DIY/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/DIY/mini-components/mini-components.scss
@@ -238,6 +238,7 @@
         border-radius: 0;
         padding: 14px 10px;
         height: 45px;
+        width: 100%;
       }
     }
   }
@@ -267,13 +268,3 @@
     }
   }
 }
-
-////// DIY SEARCH START //////
-
-
-
-
-
-
-
-////// DIY SEARCH END //////
