added the support for campaign link trigger

--- a/react_webviews/src/dashboard/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/mini-components/mini-components.scss
@@ -75,6 +75,7 @@
         color:#767E86;
         font-weight: 600;
         letter-spacing: 1px;
+        cursor: pointer;
     }
     span.selected {
         background-color: var(--primary);
