done css fix for the cta Button in LinkITem component, removed unwanted button usage

--- a/react_webviews/src/desktopLayout/Drawer.scss
+++ b/react_webviews/src/desktopLayout/Drawer.scss
@@ -5,3 +5,10 @@
     width: 300px;
   }
 }
+
+.mobile-drawer{
+  top: 55px !important;
+  .MuiDrawer-paper,.MuiBackdrop-root{
+    top: 55px !important;
+  }
+}
