--- a/react_webviews/src/desktopLayout/NavList.scss
+++ b/react_webviews/src/desktopLayout/NavList.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background: #fafafa;
   .user-mobile-details {
     padding: 15px;
     border-bottom: 1px solid #e8e8e8;
@@ -25,9 +26,15 @@
     }
   }
   .navlink-lists {
-    width: 280px;
     .nav-link-listItem {
       padding: 10px 20px;
+      cursor: pointer;
+    }
+    .nav-link-listItem:hover{
+      background: #f3f3f3;
+    }
+    .navlink-active.nav-link-listItem{
+      background: white !important;
     }
     .nav-link-icons {
       width: 30px;
@@ -67,10 +74,19 @@
 
 @media only screen and (max-width: 500px) {
   .navlink-container {
+    background: white;
+    height: 90%;
+    overflow-y: auto;
+    width: 250px;
     .navlink-lists {
       width: 250px;
       .nav-link-listItem {
         padding: 3px 10px;
+        .nav-link-text{
+          span{
+            font-size: 14px !important;
+          }
+        }
       }
     }
   }
