--- a/react_webviews/src/dashboard/Recommendation/Recommendation.scss
+++ b/react_webviews/src/dashboard/Recommendation/Recommendation.scss
@@ -19,12 +19,25 @@
     display: flex;
     align-items: center;
     
-    & > div {
-      flex: 1 1 80%;
+    .recommendation-title {
       font-weight: 600;
       font-size: 16px;
       line-height: 1.6;
     }
+
+    .recommendation-how-button {
+      color: #fff;
+      background: var(--primary);
+      border-radius: 8px;
+      padding: 2px 10px;
+      letter-spacing: 1px;
+      margin-left: 10px;
+      font-size: 12px;
+      line-height: 18px;
+      font-weight: 600;
+      text-transform: uppercase;
+    }
+
     .edit-recommendation-funds {
       flex: 1 1 20%;
       text-align: right;
