--- a/react_webviews/src/dashboard/Invest/components/NFO/FundDetail.scss
+++ b/react_webviews/src/dashboard/Invest/components/NFO/FundDetail.scss
@@ -55,6 +55,10 @@
       margin: 0 10px;
       font-weight: 500;
     }
+
+    .text-capitalize {
+      text-transform: capitalize;
+    }
   }
 
   .nfo-invest-button {
@@ -66,7 +70,6 @@
     height: 40px;
     font-weight: 400;
     font-size: 14px !important;
-    border-radius: 3px;
   }
 
   .risk {
