--- a/react_webviews/src/dashboard/Invest/components/NFO/FundDetail.scss
+++ b/react_webviews/src/dashboard/Invest/components/NFO/FundDetail.scss
@@ -11,7 +11,7 @@
     box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
   }
 
-  .recommended {
+  .nfo-recommended {
     color: #fff;
     font-size: 8px;
     letter-spacing: 2px;
