--- a/react_webviews/src/dashboard/Recommendation/Recommendation.scss
+++ b/react_webviews/src/dashboard/Recommendation/Recommendation.scss
@@ -54,11 +54,14 @@
   .recommendations-total-investment {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 22px;
     padding: 10px 0px;
+    color: rgb(74, 74, 74);
+    .amount-per-month{
+      font-size: 12.75px;
+    }
   }
 }
 
