--- a/react_webviews/src/dashboard/Recommendation/Recommendation.scss
+++ b/react_webviews/src/dashboard/Recommendation/Recommendation.scss
@@ -36,6 +36,7 @@
       line-height: 18px;
       font-weight: 600;
       text-transform: uppercase;
+      cursor: pointer;
     }
 
     .edit-recommendation-funds {
