--- a/react_webviews/src/desktopLayout/DesktopLayout.scss
+++ b/react_webviews/src/desktopLayout/DesktopLayout.scss
@@ -8,12 +8,11 @@
   .middle-content{
     display: flex;
     height: 100%;
+    margin-left: 300px !important;
   }
 
   .feature-container{
     width: 640px !important;
-    margin-left: 300px !important;
-    min-width: 640px !important;
     padding-bottom: 60px;
     overflow: auto;
     height: 100%;
@@ -36,6 +35,40 @@
     display: grid;
     place-items: center;
     background: #fafafa;
+  }
+}
+
+@media only screen and (min-width: 768px){  
+  .MuiModal-root{
+    top: 60px !important;
+    margin-left: 300px !important;
+    position: fixed !important;
+    width: calc(100% - 300px) !important;
+    max-width: 640px !important;
+    height: initial !important;
+
+    .MuiDialog-paper{
+      max-width: 500px !important;
+      max-height: 80% !important;
+    }
+  }
+
+  #diy-dialog{
+    .MuiDialog-paper{
+      max-width: 100% !important;
+    }
+  }
+  #sdk-campaign-dialog.MuiModal-root,#referral-dialog.MuiModal-root,#feedback-campaign-dialog.MuiModal-root{
+    top: 0px !important;
+    margin-left: 0px !important;
+    position: fixed !important;
+    width: 100% !important;
+    max-width: 100% !important;
+    height: 100% !important;
+  }
+
+  .MuiBackdrop-root{
+    position: absolute !important;
   }
 }
 
