--- a/react_webviews/src/reports/commonStyles.scss
+++ b/react_webviews/src/reports/commonStyles.scss
@@ -693,15 +693,15 @@
     font-size: 30px;
   }
 
-  .margin {
+  .invest-more-margin {
     margin-top: 30px;
   }
 
-  .padding {
+  .invest-more-terms-padding {
     padding-top: 50px;
   }
 
-  .terms {
+  .invest-more-terms {
     display: flex;
     align-items: center;
 
