--- a/react_webviews/src/reports/components/Summary/commonStyles.scss
+++ b/react_webviews/src/reports/components/Summary/commonStyles.scss
@@ -1,6 +1,6 @@
 .reports {
   margin: 0 -20px -56px -20px;
-  header {
+  .reports-header {
     background-color: var(--primary);
     color: white;
     text-align: center;
