fix for the dropdown in desktop, fix for generic error dialog page and fix for the withdraw journey

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -50,9 +50,13 @@ body[data-device="web"] {
     top: 60px;
   }
   .generic-error-dialog-page{
-    max-width: var(--desktop-width);
+    // max-width: var(--desktop-width);
+    width: 100%;
     margin: 0 auto;
-    margin-top: 56px;
+    margin-top: 124px;
+    margin-left: 300px;
+    max-width: 640px;
+
   }
   .MuiAppBar-positionFixed {
     left: 0 !important;
