--- a/react_webviews/src/withdraw/components/Otp/Success.scss
+++ b/react_webviews/src/withdraw/components/Otp/Success.scss
@@ -12,4 +12,12 @@
     text-align: center;
     font-weight: 600;
   }
+
+  .withdraw-success-msg{
+    color: #747E86;
+    line-height: 1.7;
+    margin: 10px 0 0 0;
+    text-align: left;
+    font-weight: 400;
+  }
 }
