Fixed api call in redeem and switch transactions

--- a/react_webviews/src/reports/components/mini-components/mini-components.scss
+++ b/react_webviews/src/reports/components/mini-components/mini-components.scss
@@ -46,6 +46,7 @@
       .close-icon {
         color: #878787;
         padding: 15px 0 15px 15px;
+        cursor: pointer;
 
         .icon {
           vertical-align: middle;
