--- a/react_webviews/src/kyc/Equity/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/commonStyles.scss
@@ -68,3 +68,26 @@
     }
   }
 }
+
+.kyc-location-error {
+  text-align: center;
+
+  .kyc-location-error-img {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  .kyc-location-error-title {
+    font-weight: bold;
+    font-size: 17px;
+    line-height: 27px;
+    color: #161a2e;
+  }
+
+  .kyc-location-error-subtitle {
+    font-size: 13px;
+    line-height: 22px;
+    color: #767e86;
+    padding-top: 10px;
+  }
+}
