--- a/react_webviews/src/stocks/components/commonStyles.scss
+++ b/react_webviews/src/stocks/components/commonStyles.scss
@@ -91,3 +91,14 @@
     padding-top: 10px;
   }
 }
+
+.stocks-selfie-instructions {
+  margin-bottom: 40px;
+
+  .ssi-text {
+    font-size: 13px;
+    line-height: 15px;
+    color: #000000;
+    padding-bottom: 10px;
+  }
+}
