--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -532,9 +532,14 @@
     margin: 0 5px 0 0;
   }
 }
-.report-list-container{
+.insurance-common-report-page{
+  margin-top: -20px;
+.report-list-tab-container{
+  position: sticky;
+  top: 56px;
+  background-color: white;
   list-style-type: none;
-  padding: 0 0 0 0;
+  padding: 30px 0 0 0;
   margin: 0 -20px 20px -20px;
   display: flex;
   justify-content: space-between;
@@ -562,7 +567,7 @@
     }
   }
 }
-
+}
 .report-detail-header {
   display: flex;
 }
