Fixed page callback redirection and back handling

--- a/react_webviews/src/dashboard/Invest/components/PaymentCallback/PaymentCallback.scss
+++ b/react_webviews/src/dashboard/Invest/components/PaymentCallback/PaymentCallback.scss
@@ -41,6 +41,7 @@
       margin-top: 20px;
       color: #878787;
       padding-bottom: 15px;
+      justify-content: center;
 
       .eta-icon {
         width: 30px;
