--- a/react_webviews/src/dashboard/Invest/components/SipPaymentCallback/SipPaymentCallback.scss
+++ b/react_webviews/src/dashboard/Invest/components/SipPaymentCallback/SipPaymentCallback.scss
@@ -18,10 +18,10 @@
     }
 
     h4 {
-      font-size: 14px;
+      font-size: 18px;
       color: #160d2e;
       font-weight: 700;
-      margin: 0;
+      margin: 0 0 20px 0;
     }
 
     p {
