cta footer loan spacing

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1370,6 +1370,9 @@ $header-title-font-size: 20px;
   margin-left: 10px;
 }
 
+.loan-with-provider{
+  margin: 10px !important;
+}
 .FlexItem1-withProvider-footer .text-block-2 {
   color: #0a1d32;
   font-size: 15px;
