--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -79,3 +79,31 @@
     padding-bottom: 10px;
   }
 }
+
+.kyc-account-info {
+  .kyc-account-info-header {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    column-gap: 35px;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 32px;
+    color: #161a2e;
+    padding-bottom: 20px;
+
+    .kaih-text {
+      padding: 10px 0;
+    }
+  }
+
+  .kyc-account-info-main {
+    .kaim-subtitle {
+      color: #767e86;
+      font-size: 15px;
+      font-weight: 400;
+      padding: 0 0 30px 0;
+      line-height: 24px;
+    }
+  }
+}
