--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1372,6 +1372,7 @@ $header-title-font-size: 20px;
 
 .loan-with-provider{
   margin: 10px !important;
+  margin-left: 0px !important
 }
 .FlexItem1-withProvider-footer .text-block-2 {
   color: #0a1d32;
