--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -1161,12 +1161,10 @@
   }
 
   .insurance_plans_logos_small{
-    margin-right:25px;
+    margin : 20px 25px 0px 3px;
     width: 40px;
     height: 40px;
     border-radius: 2px;
-    margin-top: 20px;
-    margin-left: 3px;
     padding-left: 3px;
     padding-right: 3px;
   }
@@ -1192,6 +1190,34 @@
     margin-bottom: 16px;
     margin-top: 10px;
   }
+}
+
+// style={{ fontWeight: '400', fontSize: '13px', marginBottom: '5px', lineHeight: '15.41px', width: '100%' }}
+
+.menu-list-dropdown{
+  font-weight: 400;
+  font-size: 13px;
+  margin-bottom: 5px;
+  line-height: 15.41px;
+  width: 100%;
+}
+
+
+.menu-list-dropdown-resume{
+  background: ff6868 ; 
+  letter-spacing: 0.1;
+  font-size: 8px;
+  line-height: 10.06px;
+  position: relative;
+  top: -3px;
+  border-radius: 7;
+  padding: 2px 4px;
+  margin-top: -30px;
+  color: white;
+  font-weight: 700;
+  width: 40px;
+  left: 6px;
+  height: 14px;
 }
 
 .group-health-how-to-claim-religare{
