--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -1192,9 +1192,8 @@
   }
 }
 
-// style={{ fontWeight: '400', fontSize: '13px', marginBottom: '5px', lineHeight: '15.41px', width: '100%' }}
 
-.menu-list-dropdown{
+.menu-list-dropdown-title{
   font-weight: 400;
   font-size: 13px;
   margin-bottom: 5px;
@@ -1219,7 +1218,6 @@
   left: 6px;
   height: 14px;
 }
-
 .group-health-how-to-claim-religare{
   padding: 20px 0 20px 0;
   .ri-tile {
