--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1224,12 +1224,10 @@ body[data-device="mobile"] {
       border-radius: 2px;
     }
     .insurance_plans_logos_small{
-      margin-right:25px;
+      margin: 20px 25px 0px 3px;
       width: 40px;
       height: 40px;
       border-radius: 2px;
-      margin-top: 20px;
-      margin-left: 3px;
       padding-left: 3px;
       padding-right: 3px;
     }
